--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -466,6 +466,15 @@ body.dark-theme {
   padding: 7rem 0;
 }
 
+.producs--info-description {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  display: inline-block;
+  margin-left: 2rem;
+  width: 100%;
+}
+
 .products__filters {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -474,6 +483,8 @@ body.dark-theme {
   align-content: center;
   text-align: center;
   margin-bottom: 3.5rem;
+  flex-wrap: wrap;
+
 }
 
 .products__line {
@@ -500,16 +511,25 @@ body.dark-theme {
   font-size: var(--h3-font-size);
   color: var(--text-color);
   margin-bottom: .5rem;
+  text-align: center;
+  font-size: 2rem;
+  color: aqua;
 }
 
 .products__stock {
+  text-align: center;
+  display: inline-block;
   font-size: var(--small-font-size);
+  font-weight: 600;
+  margin: 0 0 2rem;
+
 }
 
 .products__content {
   grid-template-columns: 200px;
   gap: 2rem;
   justify-content: center;
+
 }
 
 .products__card {
@@ -538,6 +558,7 @@ body.dark-theme {
   font-size: var(--h3-font-size);
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: .25rem;
   color: var(--first-color);
 }
